--- a/backend/database/docker-compose.yml
+++ b/backend/database/docker-compose.yml
@@ -9,3 +9,5 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: root
     ports:
       - "27017:27017"
+    volumes:
+      - ./init.js:/docker-entrypoint-initdb.d/init.js:ro
